src/objects/Account_Plan_Competitive_Landscape__c.object
<CustomObject>
    <description>1.Competitive Landscape for an account is the latest competitive snapshot on the account
2. The landscape should be refreshed at least Once a quarter
3.Starts with a Price tier and tracks the 
4. Top devices from the vendor in price tier
5.Device market share rank on the account
6.Devices market share % in the price tier for the account

Also captures Vendor strategy
1. Product portfolio
2. Product Strategy
3. Marketing Strategy
4. Channel Strategy
5. Price tier strategy
6. Recent Promotions / Market Moves : 
7. Next Anticipated Replacement product launch date</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>Account Plan  covers following sections for Phase I
1. Customer Business Strategy
2. Competitive Landscape - Price tier wise / vendor wise
3. MMI Account Strategy - Annual / Quarterly

Annual Strategy can cover following:-
1. Summary
2. Portfolio Strategy
3. Product Strategy
4. Marketing Strategy
5. Channel Strategy

Quarterly Plan need to be derived from Annual Strategy and driving the quarterly priorities to align with Annual strategic plan for the account




is the MMI strategy for the Account. There are two stages to the Account plan - Annual and Quarterly
It should cover
1. Executive Summary 
2. Portfolio / Ranging Starategy
3. Account Achievements and Highlights</description>
        <inlineHelpText>Account Plan  covers following - Customer Business Strategy; Competitive Landscape - Price tier wise / vendor wise;  MMI Account Strategy - Annual / Quarterly; 
MMI Annual Strategy - Executive Summary; Portfolio Strategy Summary; Marketing, Channel</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Competitive Landscapes</relationshipLabel>
        <relationshipName>Account_Plan_Competitive_Landscapes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Average_Sell_Through_Per_Week__c</fullName>
        <description>Latest available Average Sell- Through number for the device. Number / Week</description>
        <inlineHelpText>Latest available Average Sell- Through number for the device. Number / Week</inlineHelpText>
        <label>Average Sell Through Per Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Rank__c</fullName>
        <description>Market Share rank on the account in the price tier for latest period (Week / Month)</description>
        <inlineHelpText>Market Share rank on the account in the price tier for latest period (Week / Month)</inlineHelpText>
        <label>Device Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Tier_Market_Share__c</fullName>
        <description>Device Market Share on the account in the specific price tier for latest available period</description>
        <inlineHelpText>Device Market Share on the account in the specific price tier for latest available period</inlineHelpText>
        <label>Price Tier - Market Share %</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Tier__c</fullName>
        <description>ASP Price Tier</description>
        <inlineHelpText>ASP Price Tier</inlineHelpText>
        <label>ASP ($)</label>
        <picklist>
            <picklistValues>
                <fullName>0-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-149</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150-199</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200-299</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300-399</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Name of the competitor&apos;s product</description>
        <inlineHelpText>Name of the competitor&apos;s product</inlineHelpText>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Retail_Price__c</fullName>
        <inlineHelpText>RRP</inlineHelpText>
        <label>Recommended Retail Price ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <description>1.Competitive Landscape for an account is the latest competitive snapshot on the account
2. The landscape should be refreshed at least Once a quarter
3.Starts with a Price tier and tracks the 
4. Top devices from the vendor in price tier
5.Device market share rank on the account
6.Devices market share % in the price tier for the account

Also captures Vendor strategy
1. Product portfolio
2. Product Strategy
3. Marketing Strategy
4. Channel Strategy
5. Price tier strategy
6. Recent Promotions / Market Moves : 
7. Next Anticipated Replacement product launch date</description>
        <inlineHelpText>Also captures Vendor strategy
1. Product portfolio
2. Product Strategy
3. Marketing Strategy
4. Channel Strategy
5. Price tier strategy
6. Recent Promotions / Market Moves : 
7. Next Anticipated Replacement product launch date</inlineHelpText>
        <label>Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <description>Device Vendor Name</description>
        <inlineHelpText>Device Vendor Name</inlineHelpText>
        <label>Vendor Name</label>
        <picklist>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sony</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Plan Competitive Landscape</label>
    <nameField>
        <displayFormat>CL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Competitive Landscapes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>